--- a/src/build.xml
+++ b/src/build.xml
@@ -9,6 +9,7 @@
 	<property name="release" location="latestrelease" />
 	<property name="version" value="${env.major_minor}.${env.GITHUB_RUN_NUMBER}" />
 	<property name="project" value="MetaDiscoveryThesis" />
+	<property name="env.bytecode_format" value="1.8" />
 
 	<property name="author" value="SJJ Leemans" />
 	<property name="organization" value="Queensland University of Technology" />
