--- a/src/ivy.xml
+++ b/src/ivy.xml
@@ -10,8 +10,11 @@
     </configurations>
     <dependencies defaultconf="default">
 
+        <!--Reflection failures because of this-->
         <!-- Used to checks jars for implementations-->
         <dependency org="prom" name="Filterd" rev="latest" changing="true" transitive="true"/>
+<!--        LP SOLVER -->
+        <dependency org="prom" name="LPEngine" rev="latest" changing="true" transitive="true"/>
         <!-- Dependencies for fitness algorithms-->
         <dependency org="prom" name="DataAwareExplorer" rev="latest" changing="true" transitive="true"/>
         <!-- Dependencies for discovery algorithms-->
@@ -31,6 +34,7 @@
         <dependency org="prom" name="Murata" rev="latest" changing="true" transitive="true"/>
         <dependency org="prom" name="JAXB" rev="latest" changing="true" transitive="true"/>
         <dependency conf="lib->default" org="com.fifesoft" name="rsyntaxtextarea" rev="2.5.8"/>
+        <dependency conf="lib->default" org="com.github.stephenc.high-scale-lib" name="high-scale-lib" rev="1.1.4"/>
 
     </dependencies>
 </ivy-module>
