--- a/src/build.xml
+++ b/src/build.xml
@@ -10,6 +10,8 @@
 	<property name="version" value="${env.major_minor}.${env.GITHUB_RUN_NUMBER}" />
 	<property name="project" value="MetaDiscoveryThesis" />
 	<property name="env.bytecode_format" value="1.8" />
+	<property name="java-app.dir" location="org/pipeline" />
+	<property name="python-app.dir" location="org/hyperParameterOptimizer" />
 
 	<property name="author" value="SJJ Leemans" />
 	<property name="organization" value="Queensland University of Technology" />
@@ -132,5 +134,36 @@
 		</zip>
 	</target>
 
-	<target name="buildHudson" depends="clean,resolve,compile,makejar,archive" />
+	<target name="prepare-java-docker">
+		<copy file="${dist}/MetaDiscoveryThesis.jar" tofile="${java-app.dir}/MetaDiscoveryThesis.jar" />
+	</target>
+
+	<target name="build-java-docker" depends="prepare-java-docker">
+		<exec executable="docker" dir="${java-app.dir}">
+			<arg value="build" />
+			<arg value="-t" />
+			<arg value="java-service-image" />
+			<arg value="." />
+		</exec>
+	</target>
+
+	<target name="build-python-docker">
+		<exec executable="docker" >
+			<arg value="build" />
+			<arg value="-t" />
+			<arg value="python-service-image" />
+			<arg value="${python-app.dir}" />
+		</exec>
+	</target>
+
+	<target name="clean-docker" depends="build-java-docker">
+		<delete file="${java-app.dir}/MetaDiscoveryPipeline.jar" />
+	</target>
+
+	<target name="build-docker" depends="build-java-docker, build-python-docker, clean-docker">
+		<echo message="Both Docker images have been built successfully!" />
+	</target>
+
+	<target name="buildHudson" depends="clean,resolve,compile,makejar,archive, build-docker" />
+
 </project>
