--- a/src/build.xml
+++ b/src/build.xml
@@ -82,6 +82,7 @@
 					<attribute name="Implementation-Version" value="${version} ${TODAY}" />
 					<attribute name="Implementation-Vendor" value="www.processmining.org" />
 					<attribute name="Sealed" value="false" />
+					<attribute name="Main-Class" value="org.pipeline.MetaDiscoveryPipeline" />
 				</manifest>
 			</jar>
 			<copy file="${dist}/${project}-${DSTAMP}.jar" tofile="${dist}/${project}.jar" overwrite="true" />
