--- a/src/org/pipeline/Dockerfile
+++ b/src/org/pipeline/Dockerfile
@@ -1,18 +1,17 @@
-# Use an OpenJDK base image
 FROM openjdk:8-jdk-slim
 
-# Set the working directory
 WORKDIR /app
 
-# Copy the compiled Java program JAR and dependencies
 COPY MetaDiscoveryThesis.jar /app/MetaDiscoveryThesis.jar
 COPY exampleLogs /app/exampleLogs
+COPY lib /app/lib
+COPY libs /app/libs
+COPY ivy /app/ivy
 
-# Expose the Java service's port
+ENV CLASSPATH="/app/MetaDiscoveryThesis.jar:/app/ivy/*:/app/lib/*:/app/libs/*"
+
 EXPOSE 8080
 
-# Set environment variable for event log
-ENV EVENT_LOG_PATH=/src/org/pipeline/exampleLogs/Road_Traffic_Fine_Management_Process.xes
+ENV EVENT_LOG_PATH="/app/exampleLogs/Road_Traffic_Fine_Management_Process.xes"
 
-# Command to start the Java service
-CMD ["java", "-jar", "MetaDiscoveryThesis.jar"]
+CMD ["java", "-cp", "/app/MetaDiscoveryThesis.jar:/app/lib/*:/app/libs/*:/app/ivy/*", "org.pipeline.MetaDiscoveryPipeline"]
