--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: java-service-image
     ports:
       - "8080:8080"
-
+      - "5005:5005"
+    environment:
+      - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
   python-service:
     image: python-service-image
     depends_on:
