--- a/src/org/hyperParameterOptimizer/Dockerfile
+++ b/src/org/hyperParameterOptimizer/Dockerfile
@@ -4,12 +4,16 @@ FROM python:3.11-slim
 # Set the working directory
 WORKDIR /app
 
-# Copy the Python script and requirements
+# Copy the Python script, configuration, and requirements
 COPY bayesianOptimizer.py .
+COPY params.json .
 COPY requirements.txt .
 
 # Install dependencies
 RUN pip install -r requirements.txt
+
+# Set an environment variable for the config file path
+ENV CONFIG_PATH="/app/params.json"
 
 # Expose any needed port (if required for debugging, not necessary here)
 EXPOSE 5000
