--- a/src/org/pipeline/Dockerfile
+++ b/src/org/pipeline/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     tar \
     gcc \
     make \
+    curl  \
     unzip \
     g++ \
     libfreetype6 \
