test + ilp miner
and some env vars

--- a/src/docker/.env
+++ b/src/docker/.env
@@ -3,4 +3,4 @@ JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 EVENT_LOG_PATH=/app/event-log/eventLog.xes
 JAVA_SERVICE_URL=http://java-service:8080/pipeline
 POSTGRES_PASSWORD=postgres
-OPTUNA_RESUME_STUDY=
+OPTUNA_STUDY_NAME=etuimaina
