--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -24,9 +24,8 @@ services:
       java-service:
         condition: service_healthy
     environment:
+      - OPTUNA_STUDY_NAME=${OPTUNA_STUDY_NAME}
       - JAVA_SERVICE_URL=${JAVA_SERVICE_URL}
-    deploy:
-      replicas: 4
 
   db:
     image: postgres:14-alpine
