--- a/src/docker/.env
+++ b/src/docker/.env
@@ -3,4 +3,4 @@ JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 EVENT_LOG_PATH=/app/event-log/eventLog.xes
 JAVA_SERVICE_URL=http://java-service:8081/pipeline
 POSTGRES_PASSWORD=postgres
-OPTUNA_STUDY_NAME=1234
+OPTUNA_STUDY_NAME=allmetrics2
