--- a/src/docker/.env
+++ b/src/docker/.env
@@ -1,6 +1,9 @@
-EVENT_LOG_FILE=/Users/georgegeorgiev/Downloads/Road_Traffic_Fine_Management_Process.xes
+EVENT_LOG_FILE=/Users/georgegeorgiev/Downloads/Sepsis Cases - Event Log.xes
 JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 EVENT_LOG_PATH=/app/event-log/eventLog.xes
 JAVA_SERVICE_URL=http://java-service:8081/pipeline
 POSTGRES_PASSWORD=postgres
-OPTUNA_STUDY_NAME=allmetrics2
+OPTUNA_STUDY_NAME=FIRST_OFFICIAL_TEST
+DISCOVERY_RESULTS_FOLDER=/Users/georgegeorgiev/Desktop/PADS_THESIS_TEST
+DISCOVERY_RESULTS_FOLDER_NAME=FIRST_OFFICIAL_TEST
+SAVE_RESULTS=/Users/georgegeorgiev/Desktop/PADS_THESIS_TEST/FIRST_OFFICIAL_TEST
