--- a/src/build.xml
+++ b/src/build.xml
@@ -69,30 +69,14 @@
         <sequential>
             <jar jarfile="${dist}/${project}-${DSTAMP}.jar" zip64mode="as-needed">
                 <fileset dir="${build}">
-                    <include name="**"/>
-                    <exclude name="test**"/>
+                    <include name="**/*.class"/>
                 </fileset>
-                <fileset dir="${src}">
-                    <include name="**"/>
-                    <exclude name="test**"/>
-                </fileset>
-                <fileset dir="${lib}">
-                    <include name="**/*.jar"/>
-                    <exclude name="test**"/>
-                </fileset>
-                <zipfileset dir="${libs}" includes="**/*.jar">
-                    <exclude name="split-miner-1.7.1-all.jar"/>
-                </zipfileset>
-                <zipfileset dir="${ivy.lib.dir}" includes="**/*.jar"/>
                 <manifest>
                     <attribute name="Built-By" value="${user.name}"/>
                     <attribute name="Specification-Title" value="${project}"/>
                     <attribute name="Specification-Version" value="${version}"/>
-                    <attribute name="Specification-Vendor" value="www.processmining.org"/>
                     <attribute name="Implementation-Title" value="${project}"/>
                     <attribute name="Implementation-Version" value="${version} ${TODAY}"/>
-                    <attribute name="Implementation-Vendor" value="www.processmining.org"/>
-                    <attribute name="Sealed" value="false"/>
                     <attribute name="Main-Class" value="org.pipeline.MetaDiscoveryPipeline"/>
                 </manifest>
             </jar>
