--- a/src/build.xml
+++ b/src/build.xml
@@ -91,7 +91,7 @@
     </target>
 
     <target name="resolve" depends="init-ivy">
-        <ivy:retrieve type="jar,bundle" sync="true" haltonfailure="false"/>
+        <ivy:retrieve type="jar,bundle" sync="false" haltonfailure="false"/>
         <ivy:retrieve pattern="lib/[artifact]-[revision].[ext]" conf="lib" type="jar,bundle" sync="true"/>
     </target>
 
@@ -207,5 +207,7 @@
     </target>
 
     <target name="buildHudson" depends="clean,resolve,compile, makejar"/>
+<!--    <target name="buildHudson" depends="clean,compile, makejar"/>-->
+
 
 </project>
